--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.30.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -101,8 +102,8 @@ dependencies:
   flutter_tts: ^4.0.2
 
   # Firebase for authentication
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
+  # firebase_core: ^3.6.0
+  # firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
 
   # Microsoft SSO (placeholder, using OAuth2 for simplicity)
